# vee

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
bevy_viewer/: Cargo.toml
bevy_viewer/src/: char.rs  load.rs  main.rs  mask.rs
crates/bevy_viewer/src/: load.rs  main.rs  mask.rs
crates/lightweight_viewer/: Cargo.toml
crates/lightweight_viewer/src/: app.rs  camera.rs  char_draw.rs  char_model.rs  main.rs  shader-face.wgsl  shader-texture.wgsl  state.rs
crates/render_server/: Cargo.toml
crates/render_server/src/: main.rs  render.rs
crates/vee_models/: Cargo.toml
crates/vee_models/src/: building.rs  lib.rs  model.rs  positioning.rs
crates/vee_parse/: Cargo.toml
crates/vee_parse/src/: cafe.rs  ctr.rs  error.rs  generic.rs  lib.rs  nx.rs  rvl_ntr.rs  studio.rs
crates/vee_parse_macros/: Cargo.toml
crates/vee_parse_macros/src/: lib.rs
crates/vee_resources/: Cargo.toml
crates/vee_resources/src/: color.rs  lib.rs  packing.rs  shape.rs  tex.rs
crates/vee_wgpu/: Cargo.toml
crates/vee_wgpu/src/: headless.rs  lib.rs  shader.wgsl  shader_3d.wgsl  texture.rs
crates/vee_wgpu/src/draw/: body.rs  inspection.rs  mod.rs  model.rs  texture.rs
crates/vee_wgpu/tests/: mask.rs
crates/vee_wgpu/tests/common/: ffl_runner.rs  mod.rs
crates/veedit/: Cargo.toml
crates/veedit/src/: app.rs  main.rs  state.rs
crates/vfl/: Cargo.toml
crates/vfl-cli/: Cargo.toml
crates/vfl-cli/src/: main.rs
crates/vfl/src/: color.rs  lib.rs  utils.rs
crates/vfl/src/charinfo/: nx.rs
crates/vfl/src/draw/: faceline.rs  mask.rs  mesh_building.rs  mod.rs  positioning.rs  render_2d.rs  render_3d.rs  wgpu_render.rs
crates/vfl/src/res/shape/: nx.rs
crates/vfl/src/res/tex/: nx.rs
lightweight_viewer/: Cargo.toml
lightweight_viewer/src/: char.rs  char_draw.rs  char_model.rs  main.rs  render.rs  shader.wgsl  state.rs
resources_here/: Jain.ncd  Jain.rcd  j0.ffsd
src/: bin.rs  lib.rs  utils.rs
test_data/inputs/: jasmine_mask_mtx.json
testbed/: Formats.hexproj  ffl_res_high.hexpat  nx_charinfo.hexpat  nx_texture_mid_srgb.hexpat
vee/: Cargo.toml
vee/src/: color.rs  lib.rs  mask.rs  utils.rs
vee/src/charinfo/: nx.rs
vee/src/mask/: mod.rs  wgpu_render.rs
vee/src/shape_load/: nx.rs
vee/src/tex_load/: nx.rs
vfl/: Cargo.toml
vfl/src/: color.rs  lib.rs  utils.rs
vfl/src/charinfo/: mod.rs  nx.rs
vfl/src/draw/: faceline.rs  mask.rs  mod.rs  render_2d.rs  render_3d.rs  shader-3d-texture.wgsl  shader-3d.wgsl  shader.wgsl  shader_3d.wgsl  wgpu_render.rs
vfl/src/mask/: mod.rs  wgpu_render.rs
vfl/src/res/: mod.rs
vfl/src/res/shape/: nx.rs
vfl/src/res/tex/: nx.rs
vfl/src/shape_load/: nx.rs
vfl/src/tex_load/: nx.rs
