[package]
name = "lightweight_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.4"
wgpu = "25.0.0"
winit = { version = "0.30.8", features = ["android-native-activity"] }
vfl = { path = "../vfl", features = ["res", "draw"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
bytemuck = "1.23.0"
image = "0.25.6"
nalgebra = "0.33.2"
