[package]
name = "lightweight_viewer"
version.workspace = true
edition = "2024"

[dependencies]
pollster = "0.4"
wgpu = "25.0.0"
winit = { version = "0.30.11" }
vfl = { path = "../vfl", features = ["res", "wgpu"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
bytemuck = "1.23.0"
nest_struct = "0.5.4"
