[package]
name = "vee_parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
exclude.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["parser", "decompilation", "mii", "vfl", "save"]
categories = ["parser-implementations"]
description = "Parsing Mii save structures. Part of `vfl`."

[dependencies]
bilge = "0.2.0"
binrw = "0.15.0"
vee_parse_macros = { path = "../vee_parse_macros" }

[lints]
workspace = true
