[lib]
proc-macro = true

[package]
name = "vee_parse_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
exclude.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Helper library for `vee_parse`"

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
