[package]
name = "vee_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25"
vfl = { path = "../vfl", features = ["draw", "res"] }
bytemuck = "1.23.0"
glam = "0.30.3"
image = "0.25.6"
pollster = "0.4.0"
futures-intrusive = "0.5.0"

[dev-dependencies]
glam = { version = "0.30.3" , features = ["serde", "approx"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
approx = "0.5.1"
