[package]
name = "vee_wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
exclude.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["model", "wgpu", "decompilation", "mii", "vfl"]
categories = ["rendering::engine"]
description = "Rendering Miis with `wgpu`. Part of `vfl`."

[dependencies]
wgpu = "25"
bytemuck = "1.23.0"
glam = "0.30.3"
image = "0.25.6"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
vee_parse = { path = "../vee_parse", version = "0.1.1" }
vee_resources = { path = "../vee_resources", version = "0.1.1" }
vee_models = { path = "../vee_models", version = "0.1.1" }

[dev-dependencies]
glam = { version = "0.30.3", features = ["serde", "approx"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
approx = "0.5.1"

[lints]
workspace = true
