[package]
name = "vfl"
version = "0.0.1"
edition = "2024"
authors = ["Jo Null <me@j0.lol>"]
exclude = ["*.png", "*.glb", "*.dat"]
license = "MIT OR Apache-2.0"
keywords = ["rendering", "decompilation"]
categories = ["rendering"]
repository = "https://github.com/j0lol/vee"
readme = "../README.md"
description = "Mii parsing and rendering research library"

[dependencies]
binrw = "0.15.0"
bytemuck = "1.23.0"
half = "2.6.0"
itertools = "0.14.0"
num_enum = "0.7.3"

# feat: res
image = { version = "0.25.6", optional = true }
flate2 = { version = "1.1.1", features = ["rust_backend"], optional = true }

# feat: draw
glam = { version = "0.30.3", features = ["mint"], optional = true }
mint = { version = "0.5.9", optional = true }
nalgebra = { version = "0.33.2", features = ["mint"], optional = true }
tegra_swizzle = { version = "0.4.0", optional = true }
texture2ddecoder = { version = "0.1.2", optional = true }

# feat: gltf
mesh-tools = { version = "0.1.0", optional = true }

[dev-dependencies]
image-compare = "0.4.1"

[features]
res = ["dep:image", "dep:tegra_swizzle", "dep:flate2"]
draw = ["res", "dep:texture2ddecoder", "dep:glam", "dep:mint", "dep:nalgebra"]
gltf = ["res", "dep:mesh-tools"]
