[package]
name = "vfl"
version.workspace = true
edition.workspace = true
authors.workspace = true
exclude.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["rendering", "decompilation", "mii", "model", "parsing"]
categories = ["rendering::engine", "rendering::data-formats", "parser-implementations"]
description = "Mii parsing and rendering research library."

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true

[dependencies]
vee_parse = { path = "../vee_parse", version = "0.1.1" }
vee_resources = { path = "../vee_resources", optional = true, version = "0.1.1" }
vee_models = { path = "../vee_models", optional = true, version = "0.1.1" }
vee_wgpu = { path = "../vee_wgpu", optional = true, version = "0.1.1" }

[features]
res = ["dep:vee_resources", "dep:vee_models"]
wgpu = ["res", "dep:vee_wgpu"]
#gltf = ["res", "dep:mesh-tools"]

[lints]
workspace = true
